<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.FormFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitleRegistry"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintName"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintLastName"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spnGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/gender"
        android:padding="5dp" />

    <TextView
        android:id="@+id/txvDatePickerDialog"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:ems="10"
        android:text="@string/textDateBirth" />

    <EditText
        android:id="@+id/edtJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintJob"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave" />




</LinearLayout>